# sitegrabber

./: .env.example  Dockerfile  README.md  build_testsitecopy.ps1  docker-compose.yml  pyproject.toml  radiator_catalog.csv  radiator_catalog_detailed.csv  requirements.txt
alembic/: env.py
app/: celery_app.py  clone_pipeline.py  config.py  database.py  llm.py  main.py  models.py  schemas.py  storage.py  tasks.py
app/routes/: catalog_chat.py  clone_admin.py  published_site.py
nginx/: nginx.conf
static/: catalog_chat_popup.css  catalog_chat_widget.js  style.css
templates/admin/: catalog_chat_thread.html  catalog_chats.html  cms.html  crawl_tree.html  dashboard.html  filters.html  gallery_batch.html  images_manager.html  llm_last_turn.html  page_blocks.html  price_monitor.html  project.html  rewrite_batch.html  strategy_debug.html
testsitecopy/: index.html
testsitecopy/products/: arbonia.html  arbonia2057.html  arbonia2150.html  arbonia2180.html  arbonia3030.html  arbonia3057.html  arbonia3180.html  bataria.html  garmony_1_2.html  garmony_a20.html  garmony_a25.html  garmony_a40.html  garmony_c25.html  garmony_c40.html  guadro_retta_3p.html  guadro_retta_4p.html  guadro_retta_6p.html  guadro_retta_6sp.html  guadro_torre_3d.html  guadro_torre_4d.html  guadro_torre_6d.html  guardo_pilon.html  israp_tesi.html  israp_tesi_rr20565.html  israp_tesi_rr21500.html  israp_tesi_rr21800.html  israp_tesi_rr30300.html  israp_tesi_rr30565.html  israp_tesi_rr31800.html  nova_siluet.html  nova_siluet_ns_t2_1500.html  nova_siluet_ns_t2_1800.html  nova_siluet_ns_t2_570.html  (+23 more)
