[project]
name = "aichatbot"
version = "0.1.0"
description = "AI Chat server (FastAPI + SSE + PostgreSQL)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "httpx>=0.26.0",
    "alembic>=1.13.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "minio>=7.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
